# include-blob

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
include-blob-macros/: Cargo.toml
include-blob-macros/src/: lib.rs
src/: lib.rs
test-project/: Cargo.toml  build.rs
test-project/src/: main.rs
tests/: test-project.rs
