[workspace]
members = ["include-blob-macros", "test-project"]

[package]
name = "include-blob"
version = "1.0.0"
edition = "2021"
license = "0BSD"
repository = "https://github.com/SludgePhD/include-blob"
description = "Include large binary files in an application without the compile time cost of `include_bytes!`"
categories = ["development-tools::build-utils"]
keywords = ["include", "binary", "bytes", "file"]

[dependencies]
include-blob-macros = { path = "include-blob-macros", version = "=1.0.0" }
object = { version = "0.36.7", default-features = false, features = ["write"] }
ar_archive_writer = "0.4.2"
