[package]
name = "include-blob-macros"
version = "0.1.1"
edition = "2021"
license = "0BSD"
repository = "https://github.com/SludgePhD/Zaru"
description = "Include large binary files in an application without incurring the compile time cost"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.39", default-features = false, features = ["parsing", "proc-macro"] }
