[package]
name = "include-blob-macros"
version = "1.0.0"
edition = "2021"
license = "0BSD"
repository = "https://github.com/SludgePhD/include-blob"
description = "(semver-exempt implementation detail of `include-blob`; do not use)"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.39", default-features = false, features = ["parsing", "proc-macro"] }
