[package]
name = "include-blob-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "(semver-exempt implementation detail of `include-blob`; do not use)"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.39", default-features = false, features = ["parsing", "proc-macro"] }
